--- a/style.css
+++ b/style.css
@@ -552,6 +552,22 @@ img.quality-image {
   body {
     overflow-x: hidden;
   }
+
+  a.menu-toggle {
+    display: flex;
+  }
+
+  .shop-toggle a.shop {
+    display: flex;
+    border: none;
+    outline: none;
+    background-color: transparent;
+    font-size: 20px;
+  }
+
+  .navbar {
+    border-bottom: 1px solid black;
+  }
   .column-1 {
     height: 100vh;
   }
